cluster/apps/media/allow-scraping.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-scraping
  namespace: media
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  egress:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app: jellyfin-exporter
