cluster/apps/media/network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
  namespace: media
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - ipBlock:
        cidr: 10.13.2.100/32
    ports:
    - protocol: TCP
      port: 636
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.13.0.0/16
        - 192.168.0.0/16
        - 172.16.0.0/12
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
